<resources>
    <string name="app_name">UsersDataApplication</string>
    <string name="Next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="hello">Hello!</string>
    <string name="FileContent">TextView</string>
    <string name="read">Read</string>
    <string name="crash">Crash</string>
    <string name="inference">Inference</string>
    <string name="json">Json</string>
    <string name="ndk_crash">NDK-Crash</string>
</resources>